# RP4GLX

./: GLXDevice.cpp  GLXDevice.hpp  IWindow.hpp  Makefile  README.md  WindowX11.cpp  WindowX11.hpp  main.cpp
code/: CMakeLists.txt  GLXDevice.cpp  GLXDevice.hpp  GlxContext.cpp  GlxContext.hpp  GlxDevice.cpp  GlxDevice.hpp  IWindow.hpp  Makefile  Window.cpp  Window.hpp  WindowX11.cpp  WindowX11.hpp  main.cpp  main.out
